feat: a lista de barbearias populares foi concluída, porém ainda precisar ser feito alguns ajuste em questão do endereço e a posição do botão

--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ body {
 }
 
 .barbearia_recom {
-    width: 167px;
+    width: 170px;
     height: 300px;
     display: flex;
     flex-direction: column;
@@ -281,6 +281,7 @@ body {
     font-family: "Nunito", sans-serif;
     font-weight: 700;
     font-size: 14px;
+    text-transform: capitalize;
 }
 
 .avaliacao {
